# VeryReducedInstructionSetComputer

./: CMakeLists.txt  emulator.cpp  tests.cpp
